Changed the notes to an editable div
- Will see if this now performs as expected.
- If so this will be the last edited push before converting to jsPDF.

--- a/index.html
+++ b/index.html
@@ -189,8 +189,13 @@
 
           <div class="input-group">
             <label for="additional-notes">Additional Notes:</label>
-            <input type="text" id="additional-notes" name="additional-notes" maxlength="120" />
+            <div id="additional-notes" name="additional-notes" class="input-div" contenteditable="true"></div>
           </div>
+
+          <!-- <div class="input-group">
+            <label for="additional-notes">Additional Notes:</label>
+            <input type="text" id="additional-notes" name="additional-notes" maxlength="120" />
+          </div> -->
         </div>
       </div>
     </div>
