removed job from page name and title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Safety Briefing</title>
+    <title>Safety Briefing</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
     <link rel="icon" href="./media/logo-rings-only-yellow.png" />
 
@@ -16,7 +16,7 @@
   <body>
     <div id="job-safety-form">
       <div>
-        <h2>Bridge Inspection Job Safety Briefing</h2>
+        <h2>Bridge Inspection Safety Briefing</h2>
         <div class="section employee-section">
           <p>
             This form is designed to document routine bridge, culvert, and retaining wall inspections conducted by the INDOT Bridge Inspection
